--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     --bg:#f5f7fb; --card:#ffffff; --text:#1e293b; --muted:#6b7280;
     --accent:#e9413a; --accent-dark:#d7342d;
     --ok:#16a34a; --ok-btn:#16a34a; --ok-btn-shadow:rgba(22,163,74,.35);
-    --border:#efefef;                         /* ← requested EFEFEF */
+    --border:#C8C8C8;                         /* ← requested EFEFEF */
     --shadow:0 8px 18px rgba(15,23,42,.06);   /* мягче */
     --shadow-sm:0 4px 10px rgba(15,23,42,.04);
   }
